2018-05-24  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c The attribute should belong to only one scene and
	not to whole image list.

2018-05-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Changes to add CPPFLAGS to configure
	executions to hopefully get oss-fuzz build closer to success.

2018-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/jpeg/read.t: Add a JNX reader test case.

	* coders/jnx.c (ReadJNXImage): JNX image depth should be 8.

	* fuzzing/oss-fuzz-build.sh: Apply patch from Alex Gaynor to
	switch libpng to autotools build system, as well as configure
	GraphicsMagick with '--with-quantum-depth=16'.

2018-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Validate tile memory requests for
	the TIFFReadRGBATile() case in the same way as the TIFFReadTile()
	case.  Fixes oss-fuzz 8434 "graphicsmagick/coder_BIGTIFF_fuzzer:
	Out-of-memory in graphicsmagick_coder_BIGTIFF_fuzzer". (Credit to
	OSS-Fuzz)

2018-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tile.c (ReadTILEImage): Remove any existing size request
	when while image to tile.  This avoids size being used for both
	the input image size and the tile image size.  Fixes SourceForge
	issue #563 "tile:<image> appears to blow image up by 100% before
	applying tiling".

2018-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Patch from Paul Kehrer to disable
	libpng test programs and binaries while building libpng in support
	of oss-fuzz testing.

	* coders/dcm.c (DCM_ReadGrayscaleImage): If a palette was
	provided, the image may be in PseudoClass but we need DirectClass
	for gray image when GRAYSCALE_USES_PALETTE is not defined.  Fixes
	oss-fuzz 7550 "graphicsmagick/coder_DCM_fuzzer:
	Use-of-uninitialized-value in SyncImageCallBack". (Credit to
	OSS-Fuzz)
	(ReadDCMImage): Restore use of DCM_PostRescaleImage() in order to